# torchani_sandbox

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.conda  README.md  blackwell.yaml  conda.Dockerfile  condatorch.yaml  convert.py  dev_environment.yaml  dev_requirements.txt  download-dev-data.sh  download.sh  environment-dev.yaml  environment.yaml  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: build-conda-docker.yml  build-conda-pkg.yaml  build-conda-pkg.yml  build-docker-and-unittests-gpu.yml  build-docker-and-unittests.yml  build-docker.yml  cancel.yml  ci-ext.yaml  ci.yaml  clang-format.yml  conda-build.yml  conda-release-cudf.yml  conda-release.yml  cuda.yml  docs.yml  (+26 more)
ci/: install_cuda.sh  install_dependencies.sh  install_stable_dependencies.sh  upload_conda_pkg.sh
conda/: README.md  build_conda.sh  build_conda_pkg.sh  build_pkg.sh  build_pkg_requirements.txt  build_requirements.txt  conda_requirements.txt  filter_rendered_meta.py  meta_environment_from_rendered_meta.py  pkg_helpers.bash  post_process_rendered_meta.py
docs/: api.rst  conf.py  index.rst
examples/: active_learning.py  advanced_dataset_example.py  ase_interface.py  builtin_dataset_example.py  dataset_example_advanced.py  dataset_example_simple.py  datasets_advanced_usage.py  datasets_simple_usage.py  dispersion_potential.py  energy_force.py  extending_aev.py  force_training.py  fundamentals.py  general_training.py  h5_dataset_example.py  lbfgs.py  legacy_training.py  legacy_training_force.py  low_memory_on_disk.py  modular_aev.py  modular_aev_example.py  nnp_ensemble_train.py  nnp_training.py  nnp_training_force.py  nnp_training_low_memory.py  plot_aev_4body.py  repulsion_example.py  repulsive_potential.py  setup_ensemble_datasets.py  simple_dataset_example.py  simple_training.py  static_module_example.py  ti_example.py  ti_example_2.py  torch_langevin.py  train_physnet.py  training.py  training_xc.py  vibration_analysis.py
recipe/: build.sh  conda_build_config.yaml  meta.yaml
tests/: A_TEST_FOR_AL_rename.py  common.py  common_aev_test.py  energies.pkl  nl_data.pkl  test_active_learning.py  test_aev.py  test_aev_benzene_md.py  test_aev_for_ti.py  test_al.py  test_ase.py  test_builtin_models.py  test_calc.py  test_charge_model.py  test_cuaev.py  test_data.py  test_datasets.py  test_datasets_batching.py  test_datasets_builtin.py  test_device.py  test_dispersion.py  test_electro.py  test_energies.py  test_ensemble.py  test_export_and_compile.py  test_external_interface.py  test_forces.py  test_geometry.py  test_grad.py  test_grad_module.py  test_gradcheck.py  test_infer.py  test_infer2.py  test_infer_mnp.py  test_io.py  test_legacy_data.py  test_loading.py  test_neighbors.py  test_neurochem.py  test_neurochem_loading.py  (+13 more)
tools/: aev-benchmark-size.py  builtin-datasets-codegen.py  comp6.py  comp6v1-accuracy-benchmark.py  comp6v1-benchmark.py  compare-dftd3.py  dump_dispersion_constants.py  inference-benchmark.py  make-dimer-curves.py  make-srb-bond-curves.py  md-benchmark-nsys-profile.py  md-benchmark.py  md-nsys-benchmark.py  md-scaling-benchmark.py  md_scaling_benchmark.py  mnp-benchmark.py  molecule_utils.py  neighborlist-benchmark.py  plot-aevs.py  save-models.py  scaling-aev-benchmark.py  scaling-md-benchmark.py  tool_utils.py  training-aev-benchmark.py  training-benchmark-nsys-profile.py  training-benchmark.py
torchani/: __init__.py  _testing.py  active_learning.py  annotations.py  arch.py  ase.py  assembler.py  assembly.py  atomic_networks.py  atomics.py  c6_parameters.py  c6_prepare_paramters.py  calc.py  classes.py  cli.py  compat.py  constants.py  cutoffs.py  dftd3.py  electro.py  elemental_cutoff_radii.py  geometry.py  grad.py  gradgrad.py  infer.py  io.py  isolator.py  md.py  models.py  molecule_utils.py  neighbors.py  neurochem.py  nn.py  parse_repulsion_constants.py  paths.py  physnet.py  repulsion.py  repulsion_model.py  sae.py  short_range_basis.py  (+11 more)
(+196 files in other folders)
