[project]
name = "torchani"
authors = [
    {name = "Ignacio Pickering", email = "ign.pickering@gmail.com"},
    {name = "Xiang Gao", email = "qasdfgtyuiop@gmail.com"},
    {name = "Jinze Xue", email = "jinzexue@chem.ufl.edu"},
]
description = "PyTorch implementation of the ANI neural network potential family"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
    "machine-learning",
    "neural-networks",
    "deep-learning",
    "chemistry",
    "torch",
    "energy",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "typing_extensions>=4.0.0",
    "h5py",
    "tqdm",
    "typer",
    "rich",
    "ase",
    "pandas",
    "pyarrow",
    "zarr<3",
    "huggingface_hub",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/aiqm/torchani"

# NOTE: If installed with build isolation torch can't be accessed and
# the CUDA and C++ extensions can't be compiled
[build-system]
requires = ["setuptools>=75.6", "setuptools-scm>=8", "packaging>=25"]
build-backend = "setuptools.build_meta"

[project.scripts]
ani = "torchani.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchani*"]

[tool.setuptools_scm]
version_file = "torchani/_version.py"
fallback_version="0.0.0"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = "(build/.*|tests/.*|tools/.*|docs/src/examples_autogen/.*|docs/build/.*)"

[tool.pytest.ini_options]
filterwarnings = "ignore:.*distutils Version classes are deprecated.*:DeprecationWarning"
